# infra

./: .gitignore  LICENCE  README.md  ansible.cfg  pyproject.toml  reqs.txt
ansible/: .ansible-lint.yml  ansible.cfg  requirments.yml  test.yml
ansible/environment/prod/: hosts.yml  inventory.vmware.yml  jankvisor-inventory.proxmox.yml
ansible/playbooks/: stage1.yml  test.yml
ansible/playbooks/common/: deploy_mainsail.yml  post_debian_clone.yml  setup_users.yml
ansible/playbooks/full/: deploy_mainsail.yml
ansible/playbooks/networking/: freebsd_convert.yml  setup_netbox.yml  setup_opnsense_vms.yml  setup_switches.yml
ansible/playbooks/packer/: bootstrap-debian-image.yml  setup_bootstrap_machine.yml
ansible/playbooks/services/: configure_mainsail.yml  deploy_docker_containers.yml  deploy_proxys.yml
ansible/playbooks/storage/: deploy_nas.yml
ansible/plugins/filter/: vmware_ip_processor.py
ansible/roles/host_vars/: brs-sw03.yml
ansible/roles/mainsail/: README.md
ansible/roles/setup_zfs/: example.md
packer/: .gitignore
packer/deb-12-bootstrap-machine/: debian-12.pkr.hcl
packer/deb-12-bootstrap-machine/files/: preseed.pkrtpl.hcl
packer/deb-12-jankvisor/: debian-12.pkr.hcl  vars.auto.pkrvars.hcl
packer/deb-12-vcenter/: debian-12.pkr.hcl  variables.pkr.hcl  vars.auto.pkrvars.hcl
packer/freebsd-13.3/: freebsd-12.pkr.hcl  variables.pkr.hcl  vars.auto.pkrvars.hcl
packer/freebsd-13.3/files/: installconfig.pkrtpl.hcl  postinstall.pkrtpl.hcl
packer/nas-template/: debian-12.pkr.hcl  variables.pkr.hcl  vars.auto.pkrvars.hcl  vars.prod.pkrvars.hcl
terraform/: .gitignore  README.md  bws_lookup.py  terraform.tfstate
terraform/modules/vsphere_dvswitch/: main.tf  outputs.tf  variables.tf
terraform/modules/vsphere_vm/: data.tf  main.tf  variables.tf
terraform/vsphere_environ/datastore_deploy/: backend.tf  config.auto.tfvars  data.tf  datastore.tf  hosts.tf
terraform/vsphere_environ/network_deploy/: backend.tf  data.tf  folders.tf  hosts.tf  networking.tf  tags.tf
the-cows/: cowsay.sh  cowsay.sh.x.c  cowsayrb
(+225 files in other folders)
