[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = ["ripple <github@ripple.contact>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
vsphere-automation-sdk = { url = "https://github.com/vmware/vsphere-automation-sdk-python/archive/refs/tags/v8.0.3.0.zip" }
vmwarecloud-aws = { url = "https://raw.githubusercontent.com/vmware/vsphere-automation-sdk-python/master/lib/vmwarecloud-aws/vmwarecloud_aws-1.64.1-py2.py3-none-any.whl" }
nsx-python-sdk = { url = "https://raw.githubusercontent.com/vmware/vsphere-automation-sdk-python/master/lib/nsx-python-sdk/nsx_python_sdk-4.2.0-py2.py3-none-any.whl" }
nsx-policy-python-sdk = { url = "https://raw.githubusercontent.com/vmware/vsphere-automation-sdk-python/master/lib/nsx-policy-python-sdk/nsx_policy_python_sdk-4.2.0-py2.py3-none-any.whl" }
nsx-vmc-policy-python-sdk = { url = "https://raw.githubusercontent.com/vmware/vsphere-automation-sdk-python/master/lib/nsx-vmc-policy-python-sdk/nsx_vmc_policy_python_sdk-4.1.2.0.1-py2.py3-none-any.whl" }
nsx-vmc-aws-integration-python-sdk = { url = "https://raw.githubusercontent.com/vmware/vsphere-automation-sdk-python/master/lib/nsx-vmc-aws-integration-python-sdk/nsx_vmc_aws_integration_python_sdk-4.1.2.0.1-py2.py3-none-any.whl" }
vmwarecloud-draas = { url = "https://raw.githubusercontent.com/vmware/vsphere-automation-sdk-python/master/lib/vmwarecloud-draas/vmwarecloud_draas-1.23.1-py2.py3-none-any.whl" }
pyvmomi = "^8.0.3.0.1"
requests = "^2.32.3"
setuptools = "^75.8.0"
ansible-lint = "^25.1.1"
paramiko = "^3.5.0"
ansible-pylibssh = "^1.2.2"
netaddr = "^1.3.0"
pynetbox = "^7.4.1"
httpx = "^0.28.1"
pydantic = "^2.10.6"
ansible-core = "^2.18.2"
ansible-pydantic-formatting = {git = "https://github.com/rippleFCL/ansible_pydantic_formatting.git"}
librouteros = "^3.4.1"
dnspython = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
